; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/ca0106/extr_ca0106_main.c_snd_ca0106_ac97_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/ca0106/extr_ca0106_main.c_snd_ca0106_ac97_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_ac97 = type { %struct.snd_ca0106* }
%struct.snd_ca0106 = type { i32, i64 }

@AC97ADDRESS = common dso_local global i64 0, align 8
@AC97DATA = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i16 (%struct.snd_ac97*, i16)* @snd_ca0106_ac97_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal zeroext i16 @snd_ca0106_ac97_read(%struct.snd_ac97* %0, i16 zeroext %1) #0 {
  %3 = alloca %struct.snd_ac97*, align 8
  %4 = alloca i16, align 2
  %5 = alloca %struct.snd_ca0106*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i16, align 2
  store %struct.snd_ac97* %0, %struct.snd_ac97** %3, align 8
  store i16 %1, i16* %4, align 2
  %8 = load %struct.snd_ac97*, %struct.snd_ac97** %3, align 8
  %9 = getelementptr inbounds %struct.snd_ac97, %struct.snd_ac97* %8, i32 0, i32 0
  %10 = load %struct.snd_ca0106*, %struct.snd_ca0106** %9, align 8
  store %struct.snd_ca0106* %10, %struct.snd_ca0106** %5, align 8
  %11 = load %struct.snd_ca0106*, %struct.snd_ca0106** %5, align 8
  %12 = getelementptr inbounds %struct.snd_ca0106, %struct.snd_ca0106* %11, i32 0, i32 0
  %13 = load i64, i64* %6, align 8
  %14 = call i32 @spin_lock_irqsave(i32* %12, i64 %13)
  %15 = load i16, i16* %4, align 2
  %16 = load %struct.snd_ca0106*, %struct.snd_ca0106** %5, align 8
  %17 = getelementptr inbounds %struct.snd_ca0106, %struct.snd_ca0106* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @AC97ADDRESS, align 8
  %20 = add nsw i64 %18, %19
  %21 = call i32 @outb(i16 zeroext %15, i64 %20)
  %22 = load %struct.snd_ca0106*, %struct.snd_ca0106** %5, align 8
  %23 = getelementptr inbounds %struct.snd_ca0106, %struct.snd_ca0106* %22, i32 0, i32 1
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* @AC97DATA, align 8
  %26 = add nsw i64 %24, %25
  %27 = call zeroext i16 @inw(i64 %26)
  store i16 %27, i16* %7, align 2
  %28 = load %struct.snd_ca0106*, %struct.snd_ca0106** %5, align 8
  %29 = getelementptr inbounds %struct.snd_ca0106, %struct.snd_ca0106* %28, i32 0, i32 0
  %30 = load i64, i64* %6, align 8
  %31 = call i32 @spin_unlock_irqrestore(i32* %29, i64 %30)
  %32 = load i16, i16* %7, align 2
  ret i16 %32
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @outb(i16 zeroext, i64) #1

declare dso_local zeroext i16 @inw(i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
